--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px
-    padding: 0px;
+    padding: 0px
 }
 #container{
     height:300px;
@@ -42,3 +42,4 @@ button{
     font-size:20px;
 
 }
+
