--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0p
-    padding: 0px
+    padding: 0p
 }
 #container{
     height:300px;
@@ -42,5 +42,6 @@ button{
     font-size:20px;
 
 }
+
 
 
