--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 
-    padding: 0p
+    padding: 0
 }
 #container{
     height:300px;
@@ -42,6 +42,7 @@ button{
     font-size:20px;
 
 }
+
 
 
 
